Added hero section markup and styles

--- a/index.html
+++ b/index.html
@@ -8,6 +8,19 @@
     <title>Stavanger</title>
   </head>
   <body>
-    <h1>Title</h1>
+    <!-- Hero Section -->
+    <header class="hero">
+      <div class="hero__container">
+        <h1 class="hero__title">Stavanger</h1>
+        <p class="hero__subTitle">
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Distinctio
+          dolore repudiandae eveniet unde consequuntur! Hic.
+        </p>
+      </div>
+    </header>
+
+    <!-- Activities section -->
+
+    <!-- Guide section -->
   </body>
 </html>
