markup and styles for the activites section done

--- a/index.html
+++ b/index.html
@@ -20,7 +20,47 @@
     </header>
 
     <!-- Activities section -->
-
+    <main id="activities">
+      <h2 class="activities__title">Top three activities to do in Stavanger</h2>
+      <div id="activityDiv">
+        <div id="activity">
+          <img
+            src="assets/Stavanger-konserthus.jpg"
+            alt=""
+            id="activity__image"
+          />
+          <h3 class="activity__title">Placeholder</h3>
+          <p class="activity__info">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi,
+            ipsum.
+          </p>
+        </div>
+        <div id="activity">
+          <img
+            src="assets/prekestolen-nor-08c0cc25-ebaa-4f8e-9db4-3e2e96f7edb5.jpg"
+            alt=""
+            id="activity__image"
+          />
+          <h3 class="activity__title">Placeholder</h3>
+          <p class="activity__info">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi,
+            ipsum.
+          </p>
+        </div>
+        <div id="activity">
+          <img
+            src="assets/820.jpg"
+            alt="picture of activity"
+            id="activity__image"
+          />
+          <h3 class="activity__title">Placeholder</h3>
+          <p class="activity__info">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi,
+            ipsum.
+          </p>
+        </div>
+      </div>
+    </main>
     <!-- Guide section -->
   </body>
 </html>
