added guide section markup and styles

--- a/index.html
+++ b/index.html
@@ -61,6 +61,25 @@
         </div>
       </div>
     </main>
+
     <!-- Guide section -->
+    <div id="guide">
+      <div class="guide__container">
+        <img
+          src="https://source.unsplash.com/random"
+          alt=""
+          class="guide__image"
+        />
+        <aside class="guide__info">
+          <h3 class="guide__title">Placeholder</h3>
+          <p class="guide__quote">
+            "Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+            Necessitatibus ea maiores voluptatum error vero quis, eveniet aut.
+            Iste, dolor aperiam."
+          </p>
+          <p class="guide__signed">Placeholder</p>
+        </aside>
+      </div>
+    </div>
   </body>
 </html>
